--- a/src/app/components/sections/hero/hero.component.css
+++ b/src/app/components/sections/hero/hero.component.css
@@ -22,15 +22,13 @@
   font-weight: 500;
   letter-spacing: -1px;
   line-height: 47.61px;
-  padding: 0 1rem 0 1rem;
 }
 
 .hero-text p {
-  margin: 1.5rem 0 1.8rem;
+  margin: 1.5rem 0 2rem;
   font-family: "Gordita-Regular", cursive;
   color: #000000b3;
   font-size: 1.1rem;
-  line-height: 29px;
   text-align: center;
 }
 
@@ -91,7 +89,6 @@
   text-align: left;
   display: block;
   width: 98%;
-  /* height: 30px; */
   padding-left: 18px;
   cursor: pointer;
   user-select: none;
@@ -154,9 +151,113 @@
   color: #000;
   border: 1px solid transparent;
   border-radius: 8px;
-  /* padding: .5rem 1rem; */
   text-transform: capitalize;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.uploadCV .btn {
+  background-color: #fff;
+}
+
+@media (min-width: 576px) {
+  .heroSearch {
+    max-width: 100%;
+    width: 100%;
+    padding: 0.6rem 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .hero-section {
+    padding: 6.5rem 1rem 6rem;
+    min-height: 65vh;
+  }
+  .hero-text {
+    max-width: 700px;
+    width: 100%;
+  }
+  .heroSearch {
+    max-width: 100%;
+    padding: 0.6rem 1rem 0.8rem;
+  }
+  .customSelectWrapper {
+    width: 25%;
+  }
+  .heroSearch hr {
+    display: none;
+  }
+  .uploadCV .btn {
+    text-decoration: underline;
+    text-underline-offset: 10px;
+    text-decoration-thickness: 3px;
+    background: transparent;
+    font-size: 1.1rem;
+    font-weight: 700;
+    border: none;
+  }
+  .formSelect {
+    padding-right: 5px;
+  }
+  .customArrow {
+    position: absolute;
+    top: 70%;
+    right: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  .hero-section {
+    padding: 7.5rem 1rem 6rem;
+    min-height: 70vh;
+  }
+  .hero-text {
+    max-width: 800px;
+    width: 100%;
+  }
+  .heroSearch {
+    max-width: 100%;
+    padding: 0.8rem 1rem 0.8rem;
+  }
+  .hero-text h1 {
+    font-size: 4.8rem;
+    line-height: 80px;
+    font-weight: 500;
+    padding: 0 1rem 0;
+  }
+  .hero-text p {
+    margin: 1.5rem 0 2.5rem;
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero-section {
+    padding: 10rem 1rem 20rem;
+    min-height: 100vh;
+  }
+  .hero-text {
+    max-width: 800px;
+    width: 100%;
+  }
+  .heroSearch {
+    max-width: 100%;
+    padding: 1rem;
+  }
+  .hero-text h1 {
+    font-size: 4.8rem;
+    line-height: 80px;
+    font-weight: 500;
+  }
+  .hero-text p {
+    margin: 1.5rem 0 2.5rem;
+    font-size: 1.3rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .hero-text h1 {
+    font-size: 5rem;
+  }
 }
