--- a/src/app/components/sections/navbar/navbar.component.css
+++ b/src/app/components/sections/navbar/navbar.component.css
@@ -13,6 +13,7 @@
   animation-name: scroll;
   animation-duration: 1s;
   padding: 0.1rem 0.1rem;
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 @keyframes scroll {
